# marco

./: .gitignore  AGREGAR_REDIS.md  AUTENTICACION.md  AUTHORIZE_GITHUB.md  CHECKLIST_NOTIFICACIONES.md  CLAUDE.MD  CLOUD_BUILD_RESUMEN.md  Dockerfile.backend  Dockerfile.frontend  ENV_SETUP.md  IMPLEMENTACION_NOTIFICACIONES.md  NOTIFICACIONES_README.md  NOTIFICACIONES_SETUP.md  PLAN_MEJORAS.md  README.md  RESUMEN_NOTIFICACIONES.md  check_cloud_run.sh  cloudbuild.yaml  create_test_habits.py  create_test_habits.sh  docker-compose.yml  main.tf  marcar_habitos_completados.py  run_migrations.sh  setup_notifications.sh  terraform.tfstate  terraform.tfstate.backup  test_cors.py  variables.tf
.claude/agents/: fullstack-marco.md
.claude/commands/: fullstack-marco.md  maestro-zen.md
backend/: .env.example  .gitignore  README.md  alembic.ini  fix_db_schema.py  migrations_add_notifications.sql  pyproject.toml  start.sh  verify_and_stamp.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  utils.py
backend/app/routers/: analisis.py  auth.py  categorias.py  habito_dias.py  habitos.py  notifications.py  registros.py  usuarios.py
backend/app/services/: push_service.py  scheduler.py
backend/migrations/: env.py
backend/migrations/versions/: 0a5df8ebbac4_initial_baseline.py  24626d48dd9e_add_push_notifications_support.py  b1c2d3e4f5g6_add_push_notifications.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/routers/: __init__.py  test_auth.py  test_categorias.py  test_habitos.py
backend/tests/unit/: __init__.py
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  (+1 more)
(+22 files in other folders)
