[project]
name = "backend"
version = "0.1.0"
description = "API REST con FastAPI, SQLite asíncrono y Pydantic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.3",
    "pywebpush>=2.2.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
